# LLVM-18-Tracer

./: README.md
ast-pass/: CMakeLists.txt  GetLabeledStmts.cpp
cmake-scripts/: TracerConfig.cmake
full-trace/: full_trace.cpp  full_trace.h
profile-func/: CMakeLists.txt  trace_logger.h
